# lzjd-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: commisery.yml  lint.yml  test.yml
benches/: bench.rs  lzjd.rs
lib/: Cargo.toml
lib/benches/: lzjd.rs
lib/src/: crc32.rs  lib.rs  lz_dict.rs  murmur3.rs
src/: crc32.rs  lib.rs  lz_dict.rs  main.rs  murmur3.rs
