[package]
name = "lzjd"
version = "0.2.0"
authors = ["Henk Dieter <henkdieter@tweedegolf.com>"]
edition = "2018"
exclude = ["in/*", "out/*"]
description = "Rust implementation of the LZJD algorithm (https://github.com/EdwardRaff/jLZJD)"
readme = "README.md"
keywords = ["lzjd", "edit", "distance", "Lempel", "Ziv"]
categories = ["algorithms","compression","cryptography","filesystem","science"]
license = "GPL-3.0"
repository = "https://github.com/tweedegolf/lzjd-rs"

[dependencies]
clap = "2.33.3"
base64 = "0.13.0"
failure = "0.1.8"
failure_derive = "0.1.8"
fasthash= "0.4.0"
bincode = "1.3.1"
crc = "1.8.1"
walkdir = "2.3.1"
num_cpus = "1.13.0"
rayon = "1.5.0"

[dev-dependencies]
rand = "0.8.3"
criterion = "0.3.4"

[[bench]]
name = "lzjd"
harness = false
